[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
config = "0.13.3"
derive_more = "0.99.17"
display_json = "0.2.1"
dotenvy = "0.15.6"
entity = { path = "../entity" }
env_logger = "0.10.0"
errors = { path = "../errors" }
futures = "0.3.27"
jsonwebtoken = "8.3.0"
log = "0.4.17"
migration = { path = "../migration" }
regex = "1.8.4"
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.106"
