[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
