[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.26"
database = { path = "../database" }
derive_more = "0.99.17"
errors = { path = "../errors" }
futures = "0.3.27"
serde = { version = "1.0.156", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.94"
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.sea-orm]
version = "0.11.1" # sea-orm version
