[package]
name = "errors"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "errors"
path = "src/lib.rs"

[dependencies]
derive_more = "0.99.17"
display_json = "0.2.1"
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.106"
